TitanQuest2Fix: Added new FOV feature.
Added option to yaml to disable or enable
pillarbox fix.

Added new FOV feature. This allows you to set a
new FOV that the game will use instead. This
feature can be enabled or disabled. If enabled the
FOV provided in value shall be used by the game
or if disabled then the game will use its own
default FOV.

	modified:   TitanQuest2Fix.yml
	modified:   src/dllmain.cpp

--- a/TitanQuest2Fix.yml
+++ b/TitanQuest2Fix.yml
@@ -8,3 +8,20 @@ masterEnable: true
 resolution:
   width: 0
   height: 0
+
+#Available fixes
+fixes:
+
+  # If enabled pillarbox will be removed.
+  pillarbox:
+    enable: true
+
+# Available features
+features:
+
+  # If enabled in game FOV will be changed to the value provided.
+  # NOTE: Going too high or low will break the camera!
+  # NOTE: Game default FOV is 75.
+  fov:
+    enable: false
+    value: 75
