TitanQuest2Fix: Added new HUD feature.
If enabled this new feature gives the user the
ability to increase the HUD size by 12.5%, which
is just enough so that HUD elements dont go
offscreen.

	modified:   TitanQuest2Fix.yml
	modified:   src/dllmain.cpp

--- a/TitanQuest2Fix.yml
+++ b/TitanQuest2Fix.yml
@@ -25,3 +25,8 @@ features:
   fov:
     enable: false
     value: 75
+
+  # If enabled HUD will be slightly increased in size by 12.5%.
+  # NOTE: This increase is just enough to make the HUD bigger, but not enough to make elements go off screen.
+  hud:
+    enable: false
